# fireflies-meetings-fuse

./: .env.example  .gitignore  CLAUDE.md  README.md  backlog.md  fireflies-meetings.service  pyproject.toml
fireflies_meetings/: __main__.py  api.py  browser_auth.py  capture.py  chat_watcher.py  commands.py  fuse_ops.py  inode_map.py  live_stream.py  models.py  projection.py  renderer.py  session_auth.py  slug.py  status_cache.py  store.py
stubs/google/oauth2/: __init__.pyi  credentials.pyi
stubs/google_auth_oauthlib/: __init__.pyi  flow.pyi
stubs/socketio/: __init__.pyi
tests/: test_api.py  test_backoff.py  test_cqrs.py  test_fuse_ops.py  test_live_stream.py  test_models.py  test_projection_folding.py  test_renderer.py  test_store_persistence.py
